# eeg-inception-pytorch

./: .gitignore  .i18nrc.json  .pre-commit-config.yaml  README.en_US.md  pyproject.toml  train.py  utils.py  val.py
eeg_networks/: __init__.py  dataset.py
eeg_networks/nets/: __init__.py  eeg_inception.py  eeg_lstm.py
locales/: en_US.json  zh_CN.json
